tests/snapshots/exclude__dry_run.snap
---
source: tests/exclude.rs
expression: "fs::read_to_string(tempdir_path.join(\"b\").join(\"Cargo.toml\")).unwrap()"
---
[package]
name = "b"
version = "0.1.0"
edition = "2021"

[dependencies]
rand.workspace = true
