tests/snapshots/exclude__normal-2.snap
---
source: tests/exclude.rs
expression: "fs::read_to_string(tempdir_path.join(\"Cargo.toml\")).unwrap()"
---
[workspace]
members = ["a"]
exclude = ["b", "c"]
[workspace.dependencies]
bitflags = "2.6"
rand = "0.8"
