tests/snapshots/exclude__normal-4.snap
---
source: tests/exclude.rs
expression: "String::from_utf8_lossy(&stderr)"
---
    Updating "rand" in b
    Removing "b" from `workspace.members`
      Adding "b" to `workspace.exclude`
    Removing "c" from `workspace.members`
      Adding "c" to `workspace.exclude`
